--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,2 +1,14 @@
-<h1>Posts#edit</h1>
-<p>Find me in app/views/posts/edit.html.erb</p>
+<h1>編集</h1>
+<%= from_with model: @post, local: true do |from| %>
+    <div>
+        <%= from.label :title, "タイトル" %>
+        <%= from.text_field :title %>
+    </div>
+    <div>
+        <%= form.label :content, "内容" %>
+        <%= from.text_field :contet %>
+    </div>
+    <div>
+        <%= from.submit "送信" %>
+    </div>
+<% end %>
